# envfs

./: .gitignore  .history  .mergify.yml  Cargo.toml  README.md  bors.toml  default.nix  flake.nix  nixos-example-systemd-stage1.nix  nixos-example.nix  nixos-test-systemd-stage1.nix  nixos-test.nix  treefmt.nix  treefmt.toml
.github/workflows/: build.yml  nixos-test.yml
modules/: envfs.nix
scripts/: create-release.sh
src/: fs.rs  fusefd.rs  main.rs
