[package]
name = "envfs"
version = "1.0.1"
authors = ["Jörg Thalheim <joerg@thalheim.io>"]
edition = "2018"

[dependencies]
log = "0.4.*"
nix = { version = "0.27.*", features = ["mount", "process", "fs", "signal"] }
libc = "0.2.*"
simple-error = "0.3.*"
lazy_static = "1.4.*"
cntr-fuse = { version = "0.4.*", default-features = false }

[dependencies.concurrent-hashmap]
version = "0.2.*"
default-features = false
